--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "redux-thunk": "^2.4.1",
     "simplebar": "^5.3.6",
     "simplebar-react": "^2.3.6",
+    "swr": "^2.0.3",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   }
