--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.77",
     "@mui/material": "^5.6.1",
+    "@mui/x-data-grid": "^5.17.22",
     "@testing-library/jest-dom": "^5.16.2",
     "apexcharts": "^3.35.0",
     "assert": "^2.0.0",
