--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "buffer": "^6.0.3",
     "change-case": "^4.1.2",
     "date-fns": "^2.28.0",
+    "emotion": "^11.0.0",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "material-ui-popup-state": "^3.1.1",
@@ -65,6 +66,7 @@
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-toastify": "^9.0.8",
     "redux": "4.0.5",
     "redux-thunk": "^2.4.1",
