--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@emotion/styled": "^11.8.1",
     "@faker-js/faker": "^6.1.2",
     "@iconify/react": "^3.2.1",
+    "@microsoft/fetch-event-source": "^2.0.1",
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.77",
     "@mui/material": "^5.6.1",
